--- a/House_Intrusion_Detection.ipynb
+++ b/House_Intrusion_Detection.ipynb
@@ -2265,7 +2265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f2af7168-ee22-4452-b3a6-c08f4ebdd48d",
    "metadata": {
     "scrolled": true
@@ -2293,15 +2293,15 @@
       "Invalid MIT-MAGIC-COOKIE-1 key/home/akashs/.local/lib/python3.8/site-packages/torch/cuda/__init__.py:128: UserWarning: CUDA initialization: The NVIDIA driver on your system is too old (found version 11040). Please update your GPU driver by downloading and installing a new version from the URL: http://www.nvidia.com/Download/index.aspx Alternatively, go to: https://pytorch.org to install a PyTorch version that has been compiled with your version of the CUDA driver. (Triggered internally at ../c10/cuda/CUDAFunctions.cpp:108.)\n",
       "  return torch._C._cuda_getDeviceCount() > 0\n",
       "\n",
-      "0: 480x640 1 cat, 211.6ms\n",
-      "Speed: 8.5ms preprocess, 211.6ms inference, 1.9ms postprocess per image at shape (1, 3, 640, 640)\n"
+      "0: 480x640 1 cat, 220.0ms\n",
+      "Speed: 11.4ms preprocess, 220.0ms inference, 1.7ms postprocess per image at shape (1, 3, 640, 640)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🟢 Detected: cat: 0.51 at (184, 72, 469, 408)\n"
+      "🟢 Detected: cat: 0.52 at (181, 84, 445, 394)\n"
      ]
     },
     {
@@ -2309,8 +2309,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "0: 480x640 1 cat, 296.0ms\n",
-      "Speed: 4.9ms preprocess, 296.0ms inference, 1.7ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "0: 480x640 1 cat, 262.7ms\n",
+      "Speed: 2.9ms preprocess, 262.7ms inference, 2.1ms postprocess per image at shape (1, 3, 640, 640)\n",
       "\n"
      ]
     },
@@ -2318,18 +2318,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🟢 Detected: cat: 0.43 at (182, 71, 469, 397)\n"
+      "🟢 Detected: cat: 0.49 at (183, 83, 446, 405)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0: 480x640 1 cat, 223.7ms\n",
-      "Speed: 2.6ms preprocess, 223.7ms inference, 1.4ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "0: 480x640 1 cat, 255.9ms\n",
+      "Speed: 2.9ms preprocess, 255.9ms inference, 2.7ms postprocess per image at shape (1, 3, 640, 640)\n",
       "\n",
-      "0: 480x640 1 cat, 145.1ms\n",
-      "Speed: 5.0ms preprocess, 145.1ms inference, 1.1ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "0: 480x640 3 cats, 170.6ms\n",
+      "Speed: 4.0ms preprocess, 170.6ms inference, 1.3ms postprocess per image at shape (1, 3, 640, 640)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🟢 Detected: cat: 0.41 at (182, 84, 446, 411)\n",
+      "🟢 Detected: cat: 0.44 at (183, 83, 446, 408)\n",
+      "🟢 Detected: cat: 0.42 at (161, 82, 552, 478)\n",
+      "🟢 Detected: cat: 0.29 at (18, 81, 487, 479)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "0: 480x640 1 cat, 143.0ms\n",
+      "Speed: 3.6ms preprocess, 143.0ms inference, 1.2ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "\n",
+      "0: 480x640 (no detections), 163.6ms\n",
+      "Speed: 6.2ms preprocess, 163.6ms inference, 0.7ms postprocess per image at shape (1, 3, 640, 640)\n",
       "\n"
      ]
     },
@@ -2337,441 +2359,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🟢 Detected: cat: 0.49 at (183, 72, 469, 413)\n",
-      "🟢 Detected: cat: 0.49 at (184, 72, 469, 417)\n"
+      "🟢 Detected: cat: 0.52 at (184, 83, 446, 390)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0: 480x640 1 cat, 147.8ms\n",
-      "Speed: 4.0ms preprocess, 147.8ms inference, 1.2ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 1 person, 136.3ms\n",
-      "Speed: 6.7ms preprocess, 136.3ms inference, 1.1ms postprocess per image at shape (1, 3, 640, 640)\n"
+      "0: 480x640 1 person, 141.2ms\n",
+      "Speed: 8.5ms preprocess, 141.2ms inference, 1.3ms postprocess per image at shape (1, 3, 640, 640)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🟢 Detected: cat: 0.53 at (182, 72, 468, 424)\n",
-      "🟢 Detected: person: 0.69 at (0, 102, 480, 479)\n",
+      "🟢 Detected: person: 0.41 at (9, 75, 514, 479)\n",
       "🚨 Alert: Person detected!\n",
-      "📸 Alert snapshot saved: alert_person_20250618_022324.jpg\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📧 Email alert sent!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0: 480x640 1 cat, 199.9ms\n",
-      "Speed: 4.8ms preprocess, 199.9ms inference, 1.9ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🟢 Detected: cat: 0.42 at (95, 100, 314, 433)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0: 480x640 (no detections), 214.1ms\n",
-      "Speed: 5.6ms preprocess, 214.1ms inference, 0.9ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 188.4ms\n",
-      "Speed: 4.6ms preprocess, 188.4ms inference, 0.8ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 137.3ms\n",
-      "Speed: 2.9ms preprocess, 137.3ms inference, 0.6ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 152.3ms\n",
-      "Speed: 4.6ms preprocess, 152.3ms inference, 0.7ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 135.0ms\n",
-      "Speed: 8.2ms preprocess, 135.0ms inference, 0.6ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 128.3ms\n",
-      "Speed: 5.1ms preprocess, 128.3ms inference, 0.6ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 1 cat, 131.1ms\n",
-      "Speed: 6.2ms preprocess, 131.1ms inference, 1.1ms postprocess per image at shape (1, 3, 640, 640)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🟢 Detected: cat: 0.25 at (167, 79, 386, 437)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "0: 480x640 (no detections), 182.6ms\n",
-      "Speed: 5.3ms preprocess, 182.6ms inference, 1.1ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 183.2ms\n",
-      "Speed: 4.3ms preprocess, 183.2ms inference, 0.6ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 214.3ms\n",
-      "Speed: 6.9ms preprocess, 214.3ms inference, 0.8ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 139.2ms\n",
-      "Speed: 2.3ms preprocess, 139.2ms inference, 0.6ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 141.8ms\n",
-      "Speed: 3.6ms preprocess, 141.8ms inference, 0.6ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 207.4ms\n",
-      "Speed: 2.9ms preprocess, 207.4ms inference, 0.8ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 177.7ms\n",
-      "Speed: 9.8ms preprocess, 177.7ms inference, 0.8ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 146.0ms\n",
-      "Speed: 3.7ms preprocess, 146.0ms inference, 0.7ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 184.1ms\n",
-      "Speed: 3.8ms preprocess, 184.1ms inference, 0.8ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 150.2ms\n",
-      "Speed: 3.5ms preprocess, 150.2ms inference, 0.6ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 153.2ms\n",
-      "Speed: 2.7ms preprocess, 153.2ms inference, 0.7ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 172.7ms\n",
-      "Speed: 3.6ms preprocess, 172.7ms inference, 1.5ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 1 person, 1 cat, 140.4ms\n",
-      "Speed: 4.6ms preprocess, 140.4ms inference, 1.2ms postprocess per image at shape (1, 3, 640, 640)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🟢 Detected: cat: 0.38 at (0, 74, 468, 479)\n",
-      "🟢 Detected: person: 0.27 at (1, 76, 515, 479)\n",
-      "🚨 Alert: Person detected!\n",
-      "📸 Alert snapshot saved: alert_person_20250618_022337.jpg\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "0: 480x640 (no detections), 157.0ms\n",
-      "Speed: 3.9ms preprocess, 157.0ms inference, 0.8ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📧 Email alert sent!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0: 480x640 (no detections), 155.2ms\n",
-      "Speed: 3.5ms preprocess, 155.2ms inference, 1.0ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 1 person, 189.2ms\n",
-      "Speed: 5.2ms preprocess, 189.2ms inference, 2.1ms postprocess per image at shape (1, 3, 640, 640)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🟢 Detected: person: 0.44 at (59, 77, 526, 478)\n",
-      "🚨 Alert: Person detected!\n",
-      "📸 Alert snapshot saved: alert_person_20250618_022344.jpg\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📧 Email alert sent!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0: 480x640 1 person, 296.4ms\n",
-      "Speed: 6.2ms preprocess, 296.4ms inference, 2.8ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🟢 Detected: person: 0.27 at (129, 81, 516, 477)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0: 480x640 (no detections), 350.2ms\n",
-      "Speed: 5.3ms preprocess, 350.2ms inference, 2.5ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 1 person, 274.6ms\n",
-      "Speed: 3.3ms preprocess, 274.6ms inference, 1.8ms postprocess per image at shape (1, 3, 640, 640)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🟢 Detected: person: 0.58 at (0, 78, 544, 479)\n",
-      "🚨 Alert: Person detected!\n",
-      "📸 Alert snapshot saved: alert_person_20250618_022352.jpg\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "0: 480x640 1 person, 152.0ms\n",
-      "Speed: 5.7ms preprocess, 152.0ms inference, 1.3ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "📸 Alert snapshot saved: alert_person_20250618_025521.jpg\n",
       "📧 Email alert sent!\n",
-      "🟢 Detected: person: 0.48 at (2, 78, 472, 477)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0: 480x640 1 toilet, 205.9ms\n",
-      "Speed: 2.4ms preprocess, 205.9ms inference, 1.5ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 204.3ms\n",
-      "Speed: 3.8ms preprocess, 204.3ms inference, 1.2ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 290.1ms\n",
-      "Speed: 5.3ms preprocess, 290.1ms inference, 1.1ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 276.9ms\n",
-      "Speed: 9.2ms preprocess, 276.9ms inference, 1.1ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 1 toilet, 248.8ms\n",
-      "Speed: 2.5ms preprocess, 248.8ms inference, 1.9ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 228.9ms\n",
-      "Speed: 5.4ms preprocess, 228.9ms inference, 0.8ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 187.6ms\n",
-      "Speed: 2.6ms preprocess, 187.6ms inference, 0.7ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 1 person, 173.3ms\n",
-      "Speed: 4.5ms preprocess, 173.3ms inference, 2.0ms postprocess per image at shape (1, 3, 640, 640)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🟢 Detected: person: 0.36 at (0, 75, 460, 479)\n",
-      "🚨 Alert: Person detected!\n",
-      "📸 Alert snapshot saved: alert_person_20250618_022400.jpg\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📧 Email alert sent!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0: 480x640 1 toilet, 217.2ms\n",
-      "Speed: 5.3ms preprocess, 217.2ms inference, 3.2ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 238.5ms\n",
-      "Speed: 4.0ms preprocess, 238.5ms inference, 1.1ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 (no detections), 253.0ms\n",
-      "Speed: 3.9ms preprocess, 253.0ms inference, 1.0ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 2 persons, 213.8ms\n",
-      "Speed: 4.5ms preprocess, 213.8ms inference, 1.5ms postprocess per image at shape (1, 3, 640, 640)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🟢 Detected: person: 0.55 at (0, 73, 455, 479)\n",
-      "🟢 Detected: person: 0.26 at (104, 71, 534, 479)\n",
-      "🚨 Alert: Person detected!\n",
-      "📸 Alert snapshot saved: alert_person_20250618_022408.jpg\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📧 Email alert sent!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0: 480x640 1 person, 187.6ms\n",
-      "Speed: 4.1ms preprocess, 187.6ms inference, 1.4ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 1 person, 142.0ms\n",
-      "Speed: 3.4ms preprocess, 142.0ms inference, 1.4ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🟢 Detected: person: 0.56 at (164, 78, 538, 478)\n",
-      "🟢 Detected: person: 0.69 at (0, 80, 520, 479)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0: 480x640 2 persons, 189.4ms\n",
-      "Speed: 3.5ms preprocess, 189.4ms inference, 1.6ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🟢 Detected: person: 0.77 at (0, 80, 527, 479)\n",
-      "🟢 Detected: person: 0.26 at (145, 88, 544, 479)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0: 480x640 2 persons, 181.8ms\n",
-      "Speed: 4.4ms preprocess, 181.8ms inference, 2.3ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🟢 Detected: person: 0.73 at (0, 80, 535, 479)\n",
-      "🟢 Detected: person: 0.50 at (156, 81, 548, 478)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0: 480x640 2 persons, 227.0ms\n",
-      "Speed: 3.4ms preprocess, 227.0ms inference, 2.1ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 1 toilet, 156.3ms\n",
-      "Speed: 4.6ms preprocess, 156.3ms inference, 1.4ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🟢 Detected: person: 0.42 at (101, 75, 542, 479)\n",
-      "🟢 Detected: person: 0.41 at (0, 80, 484, 479)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0: 480x640 (no detections), 235.8ms\n",
-      "Speed: 3.8ms preprocess, 235.8ms inference, 1.1ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "0: 480x640 1 person, 260.3ms\n",
-      "Speed: 4.3ms preprocess, 260.3ms inference, 1.7ms postprocess per image at shape (1, 3, 640, 640)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🟢 Detected: person: 0.37 at (143, 81, 545, 479)\n",
-      "🚨 Alert: Person detected!\n",
-      "📸 Alert snapshot saved: alert_person_20250618_022416.jpg\n",
-      "📧 Email alert sent!\n",
-      "Recorded video saved as: recorded_20250618_022316.avi\n"
+      "Recorded video saved as: recorded_20250618_025508.avi\n"
      ]
     }
    ],
@@ -2783,13 +2390,18 @@
     "import smtplib\n",
     "import ssl\n",
     "from email.message import EmailMessage\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "load_dotenv()\n",
     "\n",
+    "sender_email = os.getenv(\"EMAIL\")\n",
+    "app_password = os.getenv(\"APP_PASSWORD\")\n",
     "# -------------------------------\n",
     "# 🔧 CONFIGURE EMAIL ALERT\n",
     "# -------------------------------\n",
     "def send_email_alert(subject, body, to_email, image_path=None):\n",
-    "    sender_email = \"akashsipcs@gmail.com\"       # ✅ your Gmail\n",
-    "    app_password = \"zeyw jake wutq ppsd\"           # ✅ your 16-character App Password\n",
+    "    sender_email = os.getenv(\"EMAIL\")      # ✅ your Gmail\n",
+    "    app_password = os.getenv(\"APP_PASSWORD\")           # ✅ your 16-character App Password\n",
     "\n",
     "    msg = EmailMessage()\n",
     "    msg[\"Subject\"] = subject\n",
